logs/dag_id=mlb_parser/run_id=manual__2023-09-15T07:15:16.020683+00:00/task_id=create_postgre_table_avg/attempt=1.log
[2023-09-15T07:15:22.487+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: mlb_parser.create_postgre_table_avg manual__2023-09-15T07:15:16.020683+00:00 [queued]>
[2023-09-15T07:15:22.495+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: mlb_parser.create_postgre_table_avg manual__2023-09-15T07:15:16.020683+00:00 [queued]>
[2023-09-15T07:15:22.497+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 2
[2023-09-15T07:15:22.537+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): create_postgre_table_avg> on 2023-09-15 07:15:16.020683+00:00
[2023-09-15T07:15:22.550+0000] {standard_task_runner.py:57} INFO - Started process 23678 to run task
[2023-09-15T07:15:22.567+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'mlb_parser', 'create_postgre_table_avg', 'manual__2023-09-15T07:15:16.020683+00:00', '--job-id', '783', '--raw', '--subdir', 'DAGS_FOLDER/mlb_parser.py', '--cfg-path', '/tmp/tmpc_fhnak5']
[2023-09-15T07:15:22.571+0000] {standard_task_runner.py:85} INFO - Job 783: Subtask create_postgre_table_avg
[2023-09-15T07:15:22.693+0000] {task_command.py:415} INFO - Running <TaskInstance: mlb_parser.create_postgre_table_avg manual__2023-09-15T07:15:16.020683+00:00 [running]> on host 2e8147b3a465
[2023-09-15T07:15:22.911+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='andy_hsu' AIRFLOW_CTX_DAG_ID='mlb_parser' AIRFLOW_CTX_TASK_ID='create_postgre_table_avg' AIRFLOW_CTX_EXECUTION_DATE='2023-09-15T07:15:16.020683+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-09-15T07:15:16.020683+00:00'
[2023-09-15T07:15:22.914+0000] {sql.py:274} INFO - Executing: 
            create table if not exists mlb_avg_lead_2023 (
                Name varchar(40),
                POS varchar(5),
                Team varchar(20),
                G int,
                AB int,
                H int,
                BB int,
                SO int,
                OBP float,
                SLG float,
                AVG float
                primary key(Name, POS, Team)
            )
            
[2023-09-15T07:15:22.923+0000] {base.py:73} INFO - Using connection ID 'postgres_mlb_parser_DB' for task execution.
[2023-09-15T07:15:22.931+0000] {base.py:73} INFO - Using connection ID 'postgres_mlb_parser_DB' for task execution.
[2023-09-15T07:15:22.953+0000] {sql.py:418} INFO - Running statement: 
            create table if not exists mlb_avg_lead_2023 (
                Name varchar(40),
                POS varchar(5),
                Team varchar(20),
                G int,
                AB int,
                H int,
                BB int,
                SO int,
                OBP float,
                SLG float,
                AVG float
                primary key(Name, POS, Team)
            )
            , parameters: None
[2023-09-15T07:15:22.972+0000] {taskinstance.py:1943} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 14:                 primary key(Name, POS, Team)
                                    ^

[2023-09-15T07:15:22.996+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=mlb_parser, task_id=create_postgre_table_avg, execution_date=20230915T071516, start_date=20230915T071522, end_date=20230915T071522
[2023-09-15T07:15:23.011+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 783 for task create_postgre_table_avg (syntax error at or near "("
LINE 14:                 primary key(Name, POS, Team)
                                    ^
; 23678)
[2023-09-15T07:15:23.023+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-09-15T07:15:23.035+0000] {taskinstance.py:2784} INFO - 0 downstream tasks scheduled from follow-on schedule check
